# SimpleSequenceClassif

./: README.md  pyproject.toml  requirements.txt
experiments_notebook/: dataset_analysis.ipynb  fully_connected.ipynb  hybrid_model.ipynb  random_forest.ipynb
modules/: __init__.py  analysis.py  constants.py  data_specific.py  datasets.py  device.py  models.py  preprocessing.py
tests/: test_constants.py  test_data_specific.py  test_models.py  test_preprocessing.py
