[project]
name = "simple-sequence-classif"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "nbstripout",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
